Tue Jan 30 15:16:40 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/server.c, daemon/xdmcp.c, daemon/slave.c,
	  gui/gdmconfig.c, gui/gdmconfig-strings.c, gui/gdmconfig.glade,
	  po/POTFILES.in: x18n fixes, add missing configuration options,
	  add warning dialog about when configuration will be applied,
	  fix up gboolean vs. int mess and it's related gnome_config stuff

Tue Jan 30 14:25:20 2001  George Lebl <jirka@5z.com>

	Patch from ChiDeok Hwang <hwang@mizi.co.kr>:

	* config/locale.alias:  remove one of the entries for french as
	  that turns out to be blank on non -1 locales

	* daemon/gdm.c, daemon/verify-pam.c, daemon/verify-crypt.c,
	  daemon/verify-shadow.c: i18n fixes

	* daemon/slave.c: made user to see last message when gdm sleeps.

	* gui/gdmlogin.c: empty other menu is ugly. So remove it when it is
	  empty.  gdm_slave_greeter_ctl(GDM_MSGERR, ...) was stalled waiting
	  output from gui.

	Patch from Lee Mallabone <lee@fonicmonkey.net>:

	* configure.in, gui/Makefile.am: make gdmconfig buile and depend on
	  libglade

	* gui/gdmconfig.(c|h|desktop|glade): A working implementation of
	  the configuration.  Doesn't yet restart gdm and only works for root
	  (has no pam stuff), but much better then nothing.  Still missing
	  the new options for 2.1

2001-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "nn" to ALL_LINGUAS.
	
Thu Jan 25 23:49:44 2001  George Lebl <jirka@5z.com>

	* Release 2.0.96

Thu Jan 25 23:04:01 2001  George Lebl <jirka@5z.com>

	* daemon/slave.[ch]: cleanup

	* daemon/gdm.h, gui/gdmlogin.c, config/gdm.conf.in:  Add options
	  for setting the initial position to allow xinerama wankers to
	  make their login not suck too much.  Also added an option to
	  lock the window position and fixed some braindamages.  Fixed the
	  label style setting as well to work with non default themes.

Thu Jan 25 06:34:13 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: workaround non-working grabs, add a window title,