@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=GDM Configurator
 Comment=A graphical application for configuring the GNOME Display Manager (GDM)
-TryExec=gdmlogin
-Exec=gdmlogin
+TryExec=gdmconfig
+Exec=gdmconfig
 Icon=gdm.xpm
 Terminal=0
 Type=Application
