@@ -2555,7 +2555,7 @@ This is %n
 
 	    <widget>
 	      <class>GnomeFileEntry</class>
-	      <name>background_program</name>
+	      <name>background_program_file_entry</name>
 	      <history_id>background_program</history_id>
 	      <max_saved>10</max_saved>
 	      <title>Select a file containing Locale information</title>
@@ -2579,7 +2579,7 @@ This is %n
 	      <widget>
 		<class>GtkEntry</class>
 		<child_name>GnomeEntry:entry</child_name>
-		<name>entry10</name>
+		<name>background_program</name>
 		<can_focus>True</can_focus>
 		<signal>
 		  <name>changed</name>
