@@ -1,3 +1,12 @@
+Tue Jan 30 19:08:46 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmlogin.c, gui/gdmconfig.c, gui/gdmconfig.glade: configuration
+	  key fixes
+
+	* gui/Makefile.am: add desktop and glade to extradist
+
+	* gui/gdmconfig.desktop: start gdmconfig not gdmlogin (doh!)
+
 Tue Jan 30 15:16:40 2001  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.c, daemon/server.c, daemon/xdmcp.c, daemon/slave.c,
